# lumia_editor

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
app/: package.json  tailwind.config.ts  tsconfig.json
app/public/lumia_save_data/save_2dgraph/: 2dgraph-2025-05-10.2dgraph.json
app/public/lumia_save_data/save_lifebcircle/: lifebalance-2025-05-11.lifebalance.json
app/public/lumia_save_data/save_table/: table-2025-05-10.json
app/src/: main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/components/: ChatHistorySidebar.tsx  changeTheme.tsx  container.tsx  errorElement.tsx  search.tsx  tip.tsx
app/src/components/explorer/: index.tsx
app/src/components/file/: createFile.tsx  deleteFile.tsx  fileItem.tsx  fileList.tsx  openFile.tsx  renameFile.tsx
app/src/components/folder/: createFolder.tsx  index.tsx
app/src/components/miachat/: MessageList.tsx  chat.ts  miaChat.tsx
app/src/components/pageNavbar/: index.tsx
app/src/components/pages/: CalendarPage.tsx  chat.tsx  graph2d.tsx  lifebalancecircle.tsx  sketchboard.tsx  table2d.tsx  visualSpace.tsx
app/src/components/settings/: account.tsx  appearance.tsx  settingsGroup.tsx  userSettings.tsx
app/src/components/sidebar/: index.tsx  shared.ts  sidebarGroup.tsx
app/src/providers/: themeProvider.tsx
app/src/routes/: editor.tsx  index.tsx
app/src/store/: appStore.ts  chatStore.ts  userStore.ts  workspaceStore.ts
app/src/styles/: globals.css  tiptap-code.css
(+2 files in other folders)
